# llama.cpp-s390x

./: CODEOWNERS  convert_hf_to_gguf.py  q8_0_to_int8_demo.c
.devops/: cpu.Dockerfile  s390x.Dockerfile
.github/workflows/: build.yml  ci-audit.yml  release.yml  release1.yml  server.yml
ci/: audit.sh  run.sh
common/: arg.cpp  common.cpp  common.h  fit.cpp
docs/: build-s390x.md  build.md
docs/backend/: README.md
docs/ops/: zDNN.csv
examples/diffusion/: diffusion-cli.cpp
examples/eval-callback/: CMakeLists.txt
examples/llava/: convert_image_encoder_to_gguf.py
examples/training/: finetune.cpp
ggml/: CMakeLists.txt
ggml/include/: ggml-backend.h  ggml-cpu.h  ggml-zdnn.h
ggml/src/: CMakeLists.txt  ggml-backend-impl.h  ggml-backend-reg.cpp  ggml-backend.cpp  ggml-impl.h  ggml-quants.c  ggml.c  gguf.cpp
ggml/src/ggml-blas/: CMakeLists.txt  common.hpp  ggml-blas-rework.cpp  ggml-blas.cpp  mmf.cpp  mmf.hpp  out-prod.cpp  out-prod.hpp
ggml/src/ggml-cpu/: CMakeLists.txt  arch-fallback.h  common.h  ggml-cpu-impl.h  ggml-cpu-quants.c  ggml-cpu.c  ggml-cpu.cpp  ops.cpp  quants.c  repack.cpp  simd-mappings.h  vec.cpp  vec.h
ggml/src/ggml-cpu/amx/: mmq.cpp
ggml/src/ggml-cpu/arch/arm/: quants.c  repack.cpp
ggml/src/ggml-cpu/arch/loongarch/: quants.c
ggml/src/ggml-cpu/arch/powerpc/: quants.c
ggml/src/ggml-cpu/arch/riscv/: quants.c  repack.cpp
ggml/src/ggml-cpu/arch/s390/: cpu-feats.cpp  quants.c  repack.cpp  typedef.h
ggml/src/ggml-cpu/arch/wasm/: quants.c
ggml/src/ggml-cpu/arch/x86/: quants.c  repack.cpp
ggml/src/ggml-cpu/llamafile/: sgemm.cpp  sgemm.h
ggml/src/ggml-opencl/: ggml-opencl.cpp
ggml/src/ggml-zdnn/: CMakeLists.txt  addf.cpp  addf.hpp  common.h  common.hpp  ggml-zdnn-impl.h  ggml-zdnn-impl.hpp  ggml-zdnn-rewrite.cpp  ggml-zdnn.cpp  ggml-zdnn.cpp.bak.2  helper.hpp  mmf.cpp  mmf.hpp  utils.cpp  utils.hpp
gguf-py/gguf/: constants.py  gguf_writer.py  metadata.py
gguf-py/tests/: test_metadata.py
include/: llama.h
models/: ggml-vocab-baichuan-be.gguf  ggml-vocab-bert-bge-be.gguf  ggml-vocab-deepseek-coder-be.gguf  ggml-vocab-deepseek-llm-be.gguf  ggml-vocab-falcon-be.gguf  ggml-vocab-gpt-2-be.gguf  ggml-vocab-gpt-neox-be.gguf  ggml-vocab-llama-spm-be.gguf  ggml-vocab-mpt-be.gguf  ggml-vocab-phi-3-be.gguf  ggml-vocab-refact-be.gguf  ggml-vocab-starcoder-be.gguf
requirements/: requirements-convert_hf_to_gguf_update.txt
scripts/: compare-llama-bench.py
src/: llama-arch.cpp  llama-arch.h  llama-mmap.cpp  llama-model-loader.cpp  llama-model-loader.h  llama-model.cpp  llama-quant.cpp  llama.cpp  unicode.h
tests/: CMakeLists.txt  test-arg-parser.cpp  test-backend-ops.cpp  test-model-load-cancel.cpp  test-quantize-stats.cpp
tools/cli/: README.md
tools/completion/: README.md
tools/llama-bench/: README.md  llama-bench.cpp
tools/server/: README.md  server-context.cpp
